@@ -8858,6 +8858,7 @@ public class CMGenEditor extends StdLibrary implements GenericEditor
 				}
 			}
 
+			promptStatBool(mob, me, ++showNumber, showFlag, "Is Natural", "NATURALLANG");
 			promptStatStr(mob,me,null,++showNumber,showFlag,"Help Text","HELP",true);
 
 			if (showFlag < -900)
