@@ -47,6 +47,7 @@
  45. New Thief skills: Use Potion
  46. New class: Reliquist
  47. Builder version of OUTFIT can now be targeted, and give metacrafted gear
+ 48. Std/Gen Languages can now be marked as natural to differentiate human from encryption/animal sounds
  
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
